FACES-2206 menu options are now clickable

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/menu/button.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/menu/button.xhtml
@@ -16,19 +16,19 @@
 							<alloy:outputText value="#{i18n['edit']}" />
 						</alloy:link>
 						<hr />
-						<alloy:commandLink>
+						<alloy:link includeViewParams="true">
 							<alloy:icon name="ok-sign" />
 							<alloy:outputText value="#{i18n['enable']}" />
-						</alloy:commandLink>
-						<alloy:commandLink>
+						</alloy:link>
+						<alloy:link includeViewParams="true">
 							<alloy:icon name="minus-sign" />
 							<alloy:outputText value="#{i18n['disable']}" />
-						</alloy:commandLink>
+						</alloy:link>
 						<hr />
-						<alloy:commandLink>
+						<alloy:link includeViewParams="true">
 							<alloy:icon name="trash" />
 							<alloy:outputText value="#{i18n['delete']}" />
-						</alloy:commandLink>
+						</alloy:link>
 					</alloy:menu>
 				</alloy:button>
 				<div style="clear: both;" />
@@ -53,19 +53,19 @@
 							<alloy:outputText value="#{i18n['edit']}" />
 						</alloy:link>
 						<hr />
-						<alloy:commandLink>
+						<alloy:link includeViewParams="true">
 							<alloy:icon name="ok-sign" />
 							<alloy:outputText value="#{i18n['enable']}" />
-						</alloy:commandLink>
-						<alloy:commandLink>
+						</alloy:link>
+						<alloy:link includeViewParams="true">
 							<alloy:icon name="minus-sign" />
 							<alloy:outputText value="#{i18n['disable']}" />
-						</alloy:commandLink>
+						</alloy:link>
 						<hr />
-						<alloy:commandLink>
+						<alloy:link includeViewParams="true">
 							<alloy:icon name="trash" />
 							<alloy:outputText value="#{i18n['delete']}" />
-						</alloy:commandLink>
+						</alloy:link>
 					</alloy:menu>
 				</alloy:button>
 				<div style="clear: both;" />
