--- a/demos/bridge/jsf2-html5-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/jsf2-html5-portlet/src/main/webapp/views/applicant.xhtml
@@ -45,8 +45,8 @@
 						</alloy:column>
 						<alloy:column id="c1b" width="50">
 							<alloy:field id="dateOfBirthField" label="#{i18n['birthday']}">
-								<input jsf:id="dateOfBirth" jsf:required="true" jsf:value="#{applicantModelBean.dateOfBirth}" type="date">
-								<f:convertDateTime pattern="yyyy-MM-dd" />
+								<input jsf:id="dateOfBirth" jsf:required="true" jsf:value="#{applicantModelBean.dateOfBirth}" type="text">
+								<f:convertDateTime pattern="#{portletPreferencesValues['datePattern'][0]}" />
 								<f:ajax render="dateOfBirthField" />
 								</input>
 								<h:message for="dateOfBirth" />
