FACES-2143 Remove older captcha for master. DO NOT backport

--- a/demos/portal/jsf2-registration-portlet/src/main/webapp/views/registrant.xhtml
+++ b/demos/portal/jsf2-registration-portlet/src/main/webapp/views/registrant.xhtml
@@ -39,11 +39,7 @@
 						value="#{registrantModelBean.registrant.password1}" required="true" />
 					<aui-cc:input inlineMessage="true" label="#{i18n['confirm-password']}" type="password"
 						value="#{registrantModelBean.registrant.password2}" required="true" />
-					<liferay-ui:captcha rendered="#{registrantBackingBean.captchaRendered}" />
-					<aui-cc:input inlineMessage="true" label="#{i18n['text-verification']}"
-						value="#{registrantModelBean.registrant.captchaText}" required="true">
-						<liferay-util:validateCaptcha for="inputText" />
-					</aui-cc:input>
+					<portal:captcha rendered="#{registrantBackingBean.captchaRendered}" />					
 				</alloy:fieldset>
 			</alloy:column>
 		</alloy:row>
