FACES-2143 Develop portal:captcha (code review)

--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portal/captcha/general/captcha.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portal/captcha/general/captcha.xhtml
@@ -3,15 +3,17 @@
 	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase">
 
 	<alloy:form>
-		<alloy:messages layout="table" />
-		<showcase:example description="#{i18n['portal-captcha-general-example-1']} #{captchaBackingBean.captchaImpl}">
-			<portal:captcha value="#{captchaBackingBean.captchaText}" label="captcha"/>
-			<alloy:commandButton value="#{i18n['submit']}" action="#{captchaBackingBean.validateAction}" 
-			 ajax="false"/>
+		<showcase:example description="#{i18n['portal-captcha-general-example-1']} #{captchaBacking.captchaImpl}">
+			<alloy:messages layout="table" />
+			<alloy:field label="#{i18n['text-verification-code']}">
+				<portal:captcha required="true" value="#{captchaBacking.captchaText}" />
+			</alloy:field>
+			<alloy:commandButton action="#{captchaBacking.submit}" ajax="false" render="@form"
+				value="#{i18n['submit']}" />
 		</showcase:example>
 	</alloy:form>
 	<showcase:outputModel id="outputModel">
-		<alloy:outputText id="modelValue" value="#{captchaBackingBean.captchaText}" />
+		<alloy:outputText id="modelValue" value="#{captchaBacking.captchaText}" />
 	</showcase:outputModel>
 
 </ui:composition>
