--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portal/captcha/header.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portal/captcha/header.xhtml
@@ -1,2 +1,11 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase">
+
+	<showcase:note>
+		<h2>#{i18n['note']}</h2>
+		<p>
+			<alloy:outputText escape="false" value="#{i18n['portal-captcha-header-note']} " />
+		</p>
+	</showcase:note>
+
 </ui:composition>
