FACES-2207 After FACES-2208 is fixed ajax can be enabled for captcha

--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portal/captcha/general/captcha.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portal/captcha/general/captcha.xhtml
@@ -8,7 +8,7 @@
 			<alloy:field label="#{i18n['text-verification-code']}">
 				<portal:captcha required="true" value="#{captchaBacking.captchaText}" />
 			</alloy:field>
-			<alloy:commandButton action="#{captchaBacking.submit}" ajax="false" render="@form"
+			<alloy:commandButton action="#{captchaBacking.submit}" ajax="true" render="@form"
 				value="#{i18n['submit']}" />
 		</showcase:example>
 	</alloy:form>
