--- a/demos/bridge/jsf2-jsp-portlet/src/main/webapp/WEB-INF/views/applicant.jspx
+++ b/demos/bridge/jsf2-jsp-portlet/src/main/webapp/WEB-INF/views/applicant.jspx
@@ -1,145 +1,150 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jsp:root xmlns:aui="http://liferay.com/faces/aui" xmlns:bridge="http://liferay.com/faces/bridge"
-	xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+<jsp:root xmlns:bridge="http://liferay.com/faces/bridge" xmlns:jsp="http://java.sun.com/JSP/Page"
+	xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
 	version="2.1">
 
 	<jsp:directive.page contentType="text/html" pageEncoding="UTF-8" />
-	<h:panelGroup id="l1" rendered="#{!applicantViewBean.fileUploaderRendered}">
-		<aui:row>
-			<aui:col id="c1" width="66">
-				<h:form id="f1">
-					<h:messages globalOnly="true" layout="table" />
-					<aui:fieldset id="fs1">
-						<aui:row>
-							<aui:col id="c1a" width="50">
-								<aui:field id="firstNameField" label="#{i18n['first-name']}">
-									<h:inputText id="firstName" required="true" value="#{applicantModelBean.firstName}" />
-									<h:message for="firstName" />
-								</aui:field>
-								<aui:field id="lastNameField" label="#{i18n['last-name']}">
-									<h:inputText id="lastName" required="true" value="#{applicantModelBean.lastName}" />
-									<h:message for="lastName" />
-								</aui:field>
-								<aui:field id="emailAddressField" label="#{i18n['email-address']}">
-									<h:inputText id="emailAddress" required="true" validatorMessage="#{i18n['invalid-email-address']}"
-										value="#{applicantModelBean.emailAddress}">
-										<f:validateRegex pattern=".+[@].+[.].+" />
-									</h:inputText>
-									<h:message for="emailAddress" />
-								</aui:field>
-								<aui:field id="phoneNumberField" label="#{i18n['phone-number']}">
-									<h:inputText id="phoneNumber" required="true" value="#{applicantModelBean.phoneNumber}" />
-									<h:message for="phoneNumber" />
-								</aui:field>
-							</aui:col>
-							<aui:col id="c1b" width="50">
-								<aui:field id="dateOfBirthField" label="#{i18n['birthday']}">
-									<h:inputText id="dateOfBirth" required="true" value="#{applicantModelBean.dateOfBirth}">
-										<f:convertDateTime pattern="#{portletPreferencesValues['datePattern'][0]}" />
-									</h:inputText>
-									<h:message for="dateOfBirth" />
-								</aui:field>
-								<aui:field id="cityField" label="#{i18n['city']}">
-									<h:inputText id="city" required="true" value="#{applicantModelBean.city}" />
-									<h:message id="cityMessage" for="city" />
-								</aui:field>
-								<aui:field id="provinceIdField" label="#{i18n['state-province']}">
-									<h:selectOneMenu id="provinceId" required="true" value="#{applicantModelBean.provinceId}">
-										<f:selectItem itemLabel="#{i18n['select']}" itemValue="" />
-										<f:selectItems value="#{listModelBean.provinceSelectItems}" />
-									</h:selectOneMenu>
-									<h:message id="provinceIdMessage" for="provinceId" />
-								</aui:field>
-								<aui:field id="postalCodeField" label="#{i18n['zip-postal']}">
-									<h:inputText id="postalCode" immediate="true" onchange="this.form.submit()" required="true"
-										style="width: 100px;" value="#{applicantModelBean.postalCode}"
-										valueChangeListener="#{applicantBackingBean.postalCodeListener}" />
-									<h:graphicImage library="example" name="icon-help.png" title="#{i18n['postal-code-hint']}" />
-									<h:message id="postalCodeMessage" for="postalCode" />
-								</aui:field>
-							</aui:col>
-						</aui:row>
-					</aui:fieldset>
-					<aui:fieldset>
-						<aui:row>
-							<aui:col>
-								<aui:field id="commentsField" label="#{i18n['comments']}">
-									<h:panelGroup id="showHide" layout="block">
-										<h:commandLink actionListener="#{applicantViewBean.toggleComments}" immediate="true"
-											rendered="#{!applicantViewBean.commentsRendered}" value="#{i18n['show']} #{i18n['comments']}" />
-										<h:commandLink actionListener="#{applicantViewBean.toggleComments}" immediate="true"
-											rendered="#{applicantViewBean.commentsRendered}" value="#{i18n['hide']} #{i18n['comments']}" />
-									</h:panelGroup>
-									<h:inputTextarea id="comments" cols="50" rows="10" rendered="#{applicantViewBean.commentsRendered}"
-										value="#{applicantModelBean.comments}" />
-								</aui:field>
-							</aui:col>
-						</aui:row>
-					</aui:fieldset>
-					<hr />
-					<h:commandButton action="#{applicantBackingBean.submit}" value="#{i18n['submit']}" />
-					<!-- Test 5.4.2 Encoding PortletMode changes in Faces navigation -->
-					<h:commandButton
-						action="/WEB-INF/views/portletEditMode.faces?javax.portlet.faces.PortletMode=edit&amp;javax.portlet.faces.WindowState=maximized"
-						immediate="true" value="#{i18n['edit-preferences']}" />
-				</h:form>
-			</aui:col>
-			<aui:col id="c2" width="33">
-				<aui:row>
-					<aui:col id="c2a" styleClass="uploaded-files">
-						<h:form id="f2">
-							<h3>
-								<h:outputText value="#{i18n['attachments']}" />
-							</h3>
-							<h:dataTable headerClass="portlet-section-header results-header"
-								rowClasses="portlet-section-body results-row, portlet-section-alternate results-row alt"
-								value="#{applicantModelBean.uploadedFiles}" var="uploadedFile">
-								<h:column>
-									<h:commandLink actionListener="#{applicantBackingBean.deleteUploadedFile}"
-										onclick="if (! confirm('#{i18n['are-you-sure-you-want-to-delete-this']}')) {return false;}">
-										<f:param name="fileId" value="#{uploadedFile.id}" />
-										<h:graphicImage library="example" name="icon-delete.png" title="#{i18n['delete']}" />
-									</h:commandLink>
-								</h:column>
-								<h:column>
-									<f:facet name="header">
-										<h:outputText value="#{i18n['file-name']}" />
-									</f:facet>
-									<h:outputText value="#{uploadedFile.name}" />
-								</h:column>
-								<h:column>
-									<f:facet name="header">
-										<h:outputText value="#{i18n['size']}" />
-									</f:facet>
-									<h:outputText value="#{uploadedFile.size}" />
-								</h:column>
-							</h:dataTable>
-							<hr />
-							<h:commandButton actionListener="#{applicantViewBean.addAttachment}" immediate="true"
-								value="#{i18n['add-attachment']}" />
-						</h:form>
-					</aui:col>
-				</aui:row>
-			</aui:col>
-		</aui:row>
-	</h:panelGroup>
-	<h:panelGroup id="l2" rendered="#{applicantViewBean.fileUploaderRendered}">
-		<aui:row>
-			<aui:col id="c1">
-				<h:form id="f1" enctype="multipart/form-data">
-					<h:messages />
-					<h:panelGrid columns="1">
+	<h:panelGroup id="l1" layout="block" rendered="#{!applicantViewBean.fileUploaderRendered}" styleClass="row-fluid">
+		<h:panelGroup layout="block" styleClass="span8">
+			<h:form id="f1">
+				<h:messages globalOnly="true" layout="table" />
+				<fieldset id="fs1">
+					<h:panelGroup layout="block" styleClass="row-fluid">
+						<h:panelGroup id="c1a" layout="block" styleClass="span6">
+							<h:panelGroup id="firstNameField" layout="block" styleClass="control-group">
+								<h:outputLabel styleClass="control-label" value="#{i18n['first-name']}" />
+								<h:inputText id="firstName" required="true" value="#{applicantModelBean.firstName}" />
+								<h:message for="firstName" />
+							</h:panelGroup>
+							<h:panelGroup id="lastNameField" layout="block" styleClass="control-group">
+								<h:outputLabel styleClass="control-label" value="#{i18n['last-name']}" />
+								<h:inputText id="lastName" required="true" value="#{applicantModelBean.lastName}" />
+								<h:message for="lastName" />
+							</h:panelGroup>
+							<h:panelGroup id="emailAddressField" layout="block" styleClass="control-group">
+								<h:outputLabel styleClass="control-label" value="#{i18n['email-address']}" />
+								<h:inputText id="emailAddress" required="true" validatorMessage="#{i18n['invalid-email-address']}"
+									value="#{applicantModelBean.emailAddress}">
+									<f:validateRegex pattern=".+[@].+[.].+" />
+								</h:inputText>
+								<h:message for="emailAddress" />
+							</h:panelGroup>
+							<h:panelGroup id="phoneNumberField" layout="block" styleClass="control-group">
+								<h:outputLabel styleClass="control-label" value="#{i18n['phone-number']}" />
+								<h:inputText id="phoneNumber" required="true" value="#{applicantModelBean.phoneNumber}" />
+								<h:message for="phoneNumber" />
+							</h:panelGroup>
+						</h:panelGroup>
+						<h:panelGroup id="c1b" layout="block" styleClass="span6">
+							<h:panelGroup id="dateOfBirthField" layout="block" styleClass="control-group">
+								<h:outputLabel styleClass="control-label" value="#{i18n['birthday']}" />
+								<h:inputText id="dateOfBirth" required="true" value="#{applicantModelBean.dateOfBirth}">
+									<f:convertDateTime pattern="#{portletPreferencesValues['datePattern'][0]}" />
+								</h:inputText>
+								<h:message for="dateOfBirth" />
+							</h:panelGroup>
+							<h:panelGroup id="cityField" layout="block" styleClass="control-group">
+								<h:outputLabel styleClass="control-label" value="#{i18n['city']}" />
+								<h:inputText id="city" required="true" value="#{applicantModelBean.city}" />
+								<h:message id="cityMessage" for="city" />
+							</h:panelGroup>
+							<h:panelGroup id="provinceIdField" layout="block" styleClass="control-group">
+								<h:outputLabel styleClass="control-label" value="#{i18n['state-province']}" />
+								<h:selectOneMenu id="provinceId" required="true" value="#{applicantModelBean.provinceId}">
+									<f:selectItem itemLabel="#{i18n['select']}" itemValue="" />
+									<f:selectItems value="#{listModelBean.provinceSelectItems}" />
+								</h:selectOneMenu>
+								<h:message id="provinceIdMessage" for="provinceId" />
+							</h:panelGroup>
+							<h:panelGroup id="postalCodeField" layout="block" styleClass="control-group">
+								<h:outputLabel styleClass="control-label" value="#{i18n['zip-postal']}" />
+								<h:inputText id="postalCode" immediate="true" onchange="this.form.submit()" required="true"
+									style="width: 100px;" value="#{applicantModelBean.postalCode}"
+									valueChangeListener="#{applicantBackingBean.postalCodeListener}" />
+								<h:graphicImage library="example" name="icon-help.png" title="#{i18n['postal-code-hint']}" />
+								<h:message id="postalCodeMessage" for="postalCode" />
+							</h:panelGroup>
+						</h:panelGroup>
+					</h:panelGroup>
+				</fieldset>
+				<fieldset>
+					<h:panelGroup layout="block" styleClass="row-fluid">
+						<h:panelGroup layout="block" styleClass="span12">
+							<h:panelGroup id="commentsField" layout="block" styleClass="control-group">
+								<h:outputLabel styleClass="control-label" value="#{i18n['comments']}" />
+								<h:panelGroup id="showHide" layout="block">
+									<h:commandLink actionListener="#{applicantViewBean.toggleComments}" immediate="true"
+										rendered="#{!applicantViewBean.commentsRendered}" value="#{i18n['show']} #{i18n['comments']}" />
+									<h:commandLink actionListener="#{applicantViewBean.toggleComments}" immediate="true"
+										rendered="#{applicantViewBean.commentsRendered}" value="#{i18n['hide']} #{i18n['comments']}" />
+								</h:panelGroup>
+								<h:inputTextarea id="comments" cols="50" rows="10" rendered="#{applicantViewBean.commentsRendered}"
+									value="#{applicantModelBean.comments}" />
+							</h:panelGroup>
+						</h:panelGroup>
+					</h:panelGroup>
+				</fieldset>
+				<hr />
+				<h:commandButton action="#{applicantBackingBean.submit}" value="#{i18n['submit']}" />
+				<!-- Test 5.4.2 Encoding PortletMode changes in Faces navigation -->
+				<h:commandButton
+					action="/views/portletEditMode.faces?javax.portlet.faces.PortletMode=edit&amp;javax.portlet.faces.WindowState=maximized"
+					immediate="true" value="#{i18n['edit-preferences']}" />
+			</h:form>
+		</h:panelGroup>
+		<h:panelGroup layout="block" styleClass="span4">
+			<h:panelGroup layout="block" styleClass="row-fluid">
+				<h:panelGroup id="c2a" layout="block" styleClass="span12 uploaded-files">
+					<h:form id="f2">
 						<h3>
 							<h:outputText value="#{i18n['attachments']}" />
 						</h3>
-						<bridge:inputFile binding="#{applicantBackingBean.attachment1}" />
-						<bridge:inputFile binding="#{applicantBackingBean.attachment2}" />
-						<bridge:inputFile binding="#{applicantBackingBean.attachment3}" />
-					</h:panelGrid>
-					<h:commandButton actionListener="#{applicantBackingBean.uploadAttachments}" value="#{i18n['submit']}" />
-				</h:form>
-			</aui:col>
-		</aui:row>
+						<h:dataTable headerClass="portlet-section-header results-header"
+							rowClasses="portlet-section-body results-row, portlet-section-alternate results-row alt"
+							value="#{applicantModelBean.uploadedFiles}" var="uploadedFile">
+							<h:column>
+								<h:commandLink actionListener="#{applicantBackingBean.deleteUploadedFile}"
+									onclick="if (! confirm('#{i18n['are-you-sure-you-want-to-delete-this']}')) {return false;}">
+									<f:param name="fileId" value="#{uploadedFile.id}" />
+									<h:graphicImage library="example" name="icon-delete.png" title="#{i18n['delete']}" />
+								</h:commandLink>
+							</h:column>
+							<h:column>
+								<f:facet name="header">
+									<h:outputText value="#{i18n['file-name']}" />
+								</f:facet>
+								<h:outputText value="#{uploadedFile.name}" />
+							</h:column>
+							<h:column>
+								<f:facet name="header">
+									<h:outputText value="#{i18n['size']}" />
+								</f:facet>
+								<h:outputText value="#{uploadedFile.size}" />
+							</h:column>
+						</h:dataTable>
+						<hr />
+						<h:commandButton actionListener="#{applicantViewBean.addAttachment}" immediate="true"
+							value="#{i18n['add-attachment']}" />
+					</h:form>
+				</h:panelGroup>
+			</h:panelGroup>
+		</h:panelGroup>
+	</h:panelGroup>
+	<h:panelGroup id="l2" layout="block" rendered="#{applicantViewBean.fileUploaderRendered}" styleClass="row-fluid">
+		<h:panelGroup id="c1" layout="block" styleClass="span12">
+			<h:form id="f3" enctype="multipart/form-data">
+				<h:messages />
+				<h:panelGrid columns="1">
+					<h3>
+						<h:outputText value="#{i18n['attachments']}" />
+					</h3>
+					<bridge:inputFile binding="#{applicantBackingBean.attachment1}" />
+					<bridge:inputFile binding="#{applicantBackingBean.attachment2}" />
+					<bridge:inputFile binding="#{applicantBackingBean.attachment3}" />
+				</h:panelGrid>
+				<h:commandButton actionListener="#{applicantBackingBean.uploadAttachments}" value="#{i18n['submit']}" />
+			</h:form>
+		</h:panelGroup>
 	</h:panelGroup>
 
 </jsp:root>
