--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandlink/general/commandLink.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandlink/general/commandLink.xhtml
@@ -10,7 +10,7 @@
 				<alloy:commandLink rendered="#{showcaseModelBean.selectedComponent.rendered}">
 					<alloy:icon name="star" />
 					<alloy:outputText value=" #{i18n['text-for-a-link']} " />
-					<alloy:image value="/resources/images/liferay-faces-logo-small.png" />
+					<alloy:image value="#{resource['images:liferay-faces-logo-small.png']}" />
 				</alloy:commandLink>
 			</showcase:example>
 		</alloy:form>
