--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputtooltip/general/outputTooltip.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputtooltip/general/outputTooltip.xhtml
@@ -28,7 +28,7 @@
 			<alloy:outputText id="myText" value="#{i18n['position-mouse-cursor-here']}" />
 			<alloy:outputTooltip for="myText" headerText="#{i18n['header-text']}" opacity="0.5" position="bottom"
 				styleClass="tooltip-help" zIndex="0">
-				<alloy:image value="/resources/images/liferay-faces-logo-small.png" />
+				<alloy:image value="#{resource['images:liferay-faces-logo-small.png']}" />
 			</alloy:outputTooltip>
 		</showcase:example>
 	</ui:define>
