--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/general/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/general/commandButton.xhtml
@@ -10,7 +10,7 @@
 				<alloy:commandButton rendered="#{showcaseModelBean.selectedComponent.rendered}" value="1234">
 					<alloy:icon name="star" />
 					<alloy:outputText value=" #{i18n['Button']} " />
-					<alloy:image value="/resources/images/liferay-faces-logo-small.png" />
+					<alloy:image value="#{resource['images:liferay-faces-logo-small.png']}" />
 				</alloy:commandButton>
 			</showcase:example>
 		</alloy:form>
@@ -21,7 +21,7 @@
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-commandbutton-general-example-2']}" number="2"
 				renderedCheckbox="true">
-				<alloy:commandButton image="/resources/images/liferay-faces-logo-small.png"
+				<alloy:commandButton image="#{resource['images:liferay-faces-logo-small.png']}"
 					rendered="#{showcaseModelBean.selectedComponent.rendered}" value="1234" />
 			</showcase:example>
 		</alloy:form>
