--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/link/general/link.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/link/general/link.xhtml
@@ -19,7 +19,7 @@
 				<alloy:link includeViewParams="true" type="image/png">
 					<alloy:icon name="star" />
 					<alloy:outputText value=" #{i18n['text-for-a-link']} " />
-					<alloy:image value="/resources/images/liferay-faces-logo-small.png" />
+					<alloy:image value="#{resource['images:liferay-faces-logo-small.png']}" />
 				</alloy:link>
 			</showcase:example>
 		</alloy:form>
