FACES-2178 Follow JSF 2.3 convention of having Facelet views under WEB-INF/views and composite components under WEB-INF/resources (REVERT: views for showcase-webapp cannot be under WEB-INF/views)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/param/button.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/button/param/button.xhtml
@@ -4,7 +4,7 @@
 
 	<ui:define name="col1">
 		<showcase:example>
-			<!-- Implicit navigation back to /WEB-INF/views/component.xhtml -->
+			<!-- Implicit navigation back to /views/component.xhtml -->
 			<alloy:button includeViewParams="true" outcome="component">
 				<!-- Override the value of the componentUseCase view parameter in order to navigate to a -->
 				<!-- different view. -->
