FACES-2253 Refactor portlet namespaced components to comply with portlet 2.0 spec and allow them to be generated by alloy-generator

--- a/demos/showcase/showcase-portlet/src/main/webapp/WEB-INF/component/portlet/actionurl/general/actionURL.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/WEB-INF/component/portlet/actionurl/general/actionURL.xhtml
@@ -4,7 +4,7 @@
 
 	<ui:define name="col1">
 		<showcase:example>
-			<portlet:actionURL var="actionURL">
+			<portlet:actionURL escapeXml="false" var="actionURL">
 				<portlet:param name="foo" value="1234" />
 			</portlet:actionURL>
 			<form action="#{actionURL}" method="post">
