--- a/demos/showcase/showcase-portlet/src/main/webapp/WEB-INF/component/portlet/resourceurl/general/resourceURL.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/WEB-INF/component/portlet/resourceurl/general/resourceURL.xhtml
@@ -4,7 +4,7 @@
 
 	<ui:define name="col1">
 		<showcase:example>
-			<portlet:resourceURL var="resourceURL">
+			<portlet:resourceURL escapeXml="false" var="resourceURL">
 				<portlet:param name="javax.faces.resource" value="liferay-faces-logo.png" />
 				<portlet:param name="ln" value="images" />
 			</portlet:resourceURL>
