FACES-2249 <f:ajax> contains an unknown id (forward port to JSF 2.2 based branch for the sake of consistency and minimizing diffs across branches, even though the leading colon does not seem to be necessary with JSF 2.2)

--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/immediate/inputSecret.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/immediate/inputSecret.xhtml
@@ -1,5 +1,5 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
 	template="/WEB-INF/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
@@ -13,7 +13,7 @@
 				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputSecretBackingBean.submit}"
-					render="myForm1:outputModel:modelValue messagesId" value="#{i18n['submit']}" />
+					render=":myForm1:outputModel:modelValue messagesId" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{inputSecretModelBean.password}" />
@@ -32,7 +32,7 @@
 				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputSecretBackingBean.submit}"
-					render="myForm2:outputModel:modelValue messagesId" value="#{i18n['submit']}" />
+					render=":myForm2:outputModel:modelValue messagesId" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{inputSecretModelBean.password}" />
