--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/autocomplete/instant-ajax/autoComplete.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/autocomplete/instant-ajax/autoComplete.xhtml
@@ -1,6 +1,6 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/WEB-INF/templates/component-1col-60.xhtml">
 
 	<ui:define name="col1">
@@ -14,7 +14,7 @@
 						<f:selectItem itemValue="Powerful Integration" />
 						<f:selectItem itemValue="Lightweight" />
 						<f:selectItem itemValue="Open Source" />
-						<f:ajax render="myForm:outputModel:modelValue" />
+						<f:ajax render=":myForm:outputModel:modelValue" />
 					</alloy:autoComplete>
 				</alloy:field>
 			</showcase:example>
