--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/redisplay/inputSecret.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/redisplay/inputSecret.xhtml
@@ -1,5 +1,5 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
 	template="/WEB-INF/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
@@ -13,7 +13,7 @@
 				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputSecretBackingBean.submit1}"
-					render="myForm1:outputModel:modelValue messageSecret1 globalMessages" value="#{i18n['submit']}" />
+					render=":myForm1:outputModel:modelValue messageSecret1 globalMessages" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{inputSecretModelBean.password}" />
