--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/validation/inputSecret.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/validation/inputSecret.xhtml
@@ -1,6 +1,6 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" template="/WEB-INF/templates/component-2col.xhtml">
+	xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" template="/WEB-INF/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
 		<alloy:form id="myForm1">
@@ -13,7 +13,7 @@
 				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputSecretBackingBean.submit}"
-					render="myForm1:outputModel:modelValue myMessage1" value="#{i18n['submit']}" />
+					render=":myForm1:outputModel:modelValue myMessage1" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{inputSecretModelBean.password}" />
@@ -34,7 +34,7 @@
 				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputSecretBackingBean.submit}"
-					render="myForm2:outputModel:modelValue myMessage2" value="#{i18n['submit']}" />
+					render=":myForm2:outputModel:modelValue myMessage2" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{inputSecretModelBean.password}" />
