--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputtime/instant-ajax/inputTime.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputtime/instant-ajax/inputTime.xhtml
@@ -1,13 +1,13 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" template="/WEB-INF/templates/component-2col.xhtml">
+	xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" template="/WEB-INF/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
 		<alloy:form id="myForm">
 			<showcase:example>
 				<alloy:field label="#{i18n['time']}">
 					<alloy:inputTime id="time" pattern="hh:mm a" value="#{inputTimeModelBean.time}">
-						<f:ajax render="myForm:outputModel:modelValue" />
+						<f:ajax render=":myForm:outputModel:modelValue" />
 					</alloy:inputTime>
 				</alloy:field>
 			</showcase:example>
