FACES-2249 <f:ajax> contains an unknown id (forward port to JSF 2.2 based branch for the sake of consistency and minimizing diffs across branches, even though the leading colon does not seem to be necessary with JSF 2.2)

--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/autocomplete/instant-ajax/autoComplete.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/autocomplete/instant-ajax/autoComplete.xhtml
@@ -14,7 +14,7 @@
 						<f:selectItem itemValue="Powerful Integration" />
 						<f:selectItem itemValue="Lightweight" />
 						<f:selectItem itemValue="Open Source" />
-						<f:ajax render="myForm:outputModel:modelValue" />
+						<f:ajax render=":myForm:outputModel:modelValue" />
 					</alloy:autoComplete>
 				</alloy:field>
 			</showcase:example>
