--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/immediate/inputSecret.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/immediate/inputSecret.xhtml
@@ -13,7 +13,7 @@
 				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputSecretBackingBean.submit}"
-					render="myForm1:outputModel:modelValue messagesId" value="#{i18n['submit']}" />
+					render=":myForm1:outputModel:modelValue messagesId" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{inputSecretModelBean.password}" />
@@ -32,7 +32,7 @@
 				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputSecretBackingBean.submit}"
-					render="myForm2:outputModel:modelValue messagesId" value="#{i18n['submit']}" />
+					render=":myForm2:outputModel:modelValue messagesId" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{inputSecretModelBean.password}" />
