--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/redisplay/inputSecret.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/redisplay/inputSecret.xhtml
@@ -13,7 +13,7 @@
 				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputSecretBackingBean.submit1}"
-					render="myForm1:outputModel:modelValue messageSecret1 globalMessages" value="#{i18n['submit']}" />
+					render=":myForm1:outputModel:modelValue messageSecret1 globalMessages" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{inputSecretModelBean.password}" />
