--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputtime/instant-ajax/inputTime.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputtime/instant-ajax/inputTime.xhtml
@@ -7,7 +7,7 @@
 			<showcase:example>
 				<alloy:field label="#{i18n['time']}">
 					<alloy:inputTime id="time" pattern="hh:mm a" value="#{inputTimeModelBean.time}">
-						<f:ajax render="myForm:outputModel:modelValue" />
+						<f:ajax render=":myForm:outputModel:modelValue" />
 					</alloy:inputTime>
 				</alloy:field>
 			</showcase:example>
