--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsourcecode/general/inputSourceCode.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsourcecode/general/inputSourceCode.xhtml
@@ -2,13 +2,13 @@
 	xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:showcase="http://java.sun.com/jsf/composite/showcase">
 
-	<alloy:form>
+	<alloy:form id="myForm">
 		<showcase:example renderedCheckbox="true" requiredCheckbox="true" styleClass="editableAceEditor">
 			<alloy:selectOneMenu value="#{inputSourceCodeModelBean.mode}">
 				<f:selectItem itemLabel="Java" itemValue="java" />
 				<f:selectItem itemLabel="JSON" itemValue="json" />
 				<f:selectItem itemLabel="XML" itemValue="xml" />
-				<f:ajax render="componentField modelValue" />
+				<f:ajax render="componentField :myForm:outputModel:modelValue" />
 			</alloy:selectOneMenu>
 			<alloy:field id="componentField" label="#{i18n['source-code']}">
 				<alloy:inputSourceCode id="inputSourceCode" height="100" maxLines="15" mode="#{inputSourceCodeModelBean.mode}"
@@ -21,7 +21,7 @@
 			<alloy:commandButton action="#{inputSourceCodeBackingBean.submit}" render="@form"
 				value="#{i18n['submit']}" />
 		</showcase:example>
-		<showcase:outputModel>
+		<showcase:outputModel id="outputModel">
 			<alloy:outputText id="modelValue" value="#{inputSourceCodeModelBean.sourceCode}" />
 		</showcase:outputModel>
 	</alloy:form>
