FACES-2255 Incorrect appearance of alloy:button and alloy:commandButton menu

--- a/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
+++ b/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
@@ -9,6 +9,11 @@
 	padding: 4px;
 }
 
+/* alloy-button, alloy-commandbutton */
+.alloy-nodemenunav-after {
+	clear: both;
+}
+
 /* alloy-datatable */
 table.alloy-datatable thead th.facet, table.alloy-datatable tfoot td.facet {
     padding: 2px;
