FACES-2258 Move portal:buttonRow to alloy:buttonRow

--- a/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
+++ b/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
@@ -9,8 +9,8 @@
 	padding: 4px;
 }
 
-/* alloy-button, alloy-commandbutton */
-.alloy-nodemenunav-after {
+/* alloy-button-row */
+div.alloy-button-row:after {
 	clear: both;
 }
 
