FACES-2255 Incorrect appearance of alloy:button and alloy:commandButton menu

--- a/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
+++ b/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
@@ -12,6 +12,9 @@
 /* alloy-button-row */
 div.alloy-button-row:after {
 	clear: both;
+	content: " ";
+	display: block;
+	overflow: hidden;
 }
 
 /* alloy-datatable */
