--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/immediate/inputSecret.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/immediate/inputSecret.xhtml
@@ -1,5 +1,5 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
 	template="/WEB-INF/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
