--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/templates/showcase-portlet.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/templates/showcase-portlet.xhtml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <f:view xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
-	<!-- JSF 2 <h:head />
-	<h:body> -->
+	<ui:remove><!-- JSF 2 <h:head />
+	<h:body> --></ui:remove>
 		<ui:include src="showcase.xhtml" />
-	<!-- JSF2 </h:body> -->
+	<ui:remove><!-- JSF2 </h:body> --></ui:remove>
 </f:view>
