--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/templates/showcase-webapp.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/templates/showcase-webapp.xhtml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html class="aui" lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
+<html class="aui" lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
-<h:head>
+<head>
 	<title>Liferay Faces Showcase</title>
-</h:head>
-<h:body styleClass="yui3-skin-sam">
+</head>
+<body class="yui3-skin-sam">
 	<ui:include src="showcase.xhtml" />
-</h:body>
+</body>
 </html>
