FACES-2258 Move portal:buttonRow to alloy:buttonRow (fix usage in jsf2-registration-portlet)

--- a/demos/portal/jsf2-registration-portlet/src/main/webapp/WEB-INF/views/registrant.xhtml
+++ b/demos/portal/jsf2-registration-portlet/src/main/webapp/WEB-INF/views/registrant.xhtml
@@ -43,10 +43,10 @@
 				</alloy:fieldset>
 			</alloy:column>
 		</alloy:row>
-		<portal:buttonRow>
+		<alloy:buttonRow>
 			<h:commandButton actionListener="#{registrantBackingBean.submit}"
 				styleClass="aui-button-input aui-button-input-submit" value="#{i18n['submit']}" />
-		</portal:buttonRow>
+		</alloy:buttonRow>
 	</alloy:form>
 
 </ui:composition>
